// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a table width custom configuration custom-table 1`] = `
<div
  className="tc-table theme-table classname-of-simple-table"
>
  <table>
    <tbody
      className="tc-table-body theme-body"
      onScroll={undefined}
    >
      <tr
        className="tc-table-row theme-row classname-of-row-elem_1"
        data-id="elem_1"
      >
        <td
          className="td-name theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data classname-of-row-data-elem_1-name"
          >
            element 1
          </div>
        </td>
        <td
          className="td-type theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data classname-of-row-data-elem_1-type"
          >
            string
          </div>
        </td>
        <td
          className="td-desc theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data classname-of-row-data-elem_1-desc"
          >
            Description of element 1
          </div>
        </td>
      </tr>
      <tr
        className="tc-table-row theme-row classname-of-row-elem_2"
        data-id="elem_2"
      >
        <td
          className="td-name theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data classname-of-row-data-elem_2-name"
          >
            element 2
          </div>
        </td>
        <td
          className="td-type theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data classname-of-row-data-elem_2-type"
          >
            string
          </div>
        </td>
        <td
          className="td-desc theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data classname-of-row-data-elem_2-desc"
          >
            This element is a string
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render a table width custom header custom-table-with-header 1`] = `
<div
  className="tc-table theme-table classname-of-simple-table"
>
  <table>
    <thead
      className="tc-table-header theme-head classname-of-header-undefined"
    >
      <tr
        className="theme-header"
      >
        <th
          className="th-name theme-cell"
        >
          <div
            className="tc-table-header-cell name"
          >
            name
          </div>
        </th>
        <th
          className="th-type theme-cell"
        >
          <div
            className="tc-table-header-cell type"
          >
            type
          </div>
        </th>
        <th
          className="th-desc theme-cell"
        >
          <div
            className="tc-table-header-cell desc"
          >
            desc
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className="tc-table-body theme-body"
      onScroll={undefined}
    >
      <tr
        className="tc-table-row theme-row classname-of-row-elem_1"
        data-id="elem_1"
      >
        <td
          className="td-name theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data classname-of-row-data-elem_1-name"
          >
            element 1
          </div>
        </td>
        <td
          className="td-type theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data classname-of-row-data-elem_1-type"
          >
            string
          </div>
        </td>
        <td
          className="td-desc theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data classname-of-row-data-elem_1-desc"
          >
            Description of element 1
          </div>
        </td>
      </tr>
      <tr
        className="tc-table-row theme-row classname-of-row-elem_2"
        data-id="elem_2"
      >
        <td
          className="td-name theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data classname-of-row-data-elem_2-name"
          >
            element 2
          </div>
        </td>
        <td
          className="td-type theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data classname-of-row-data-elem_2-type"
          >
            string
          </div>
        </td>
        <td
          className="td-desc theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data classname-of-row-data-elem_2-desc"
          >
            This element is a string
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render a table width default configuration default-table 1`] = `
<div
  className="tc-table theme-table"
>
  <table>
    <tbody
      className="tc-table-body theme-body"
      onScroll={undefined}
    >
      <tr
        className="tc-table-row theme-row"
        data-id="elem_1"
      >
        <td
          className="td-name theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data tc-table-row-data-name"
          >
            element 1
          </div>
        </td>
        <td
          className="td-type theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data tc-table-row-data-type"
          >
            string
          </div>
        </td>
        <td
          className="td-desc theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data tc-table-row-data-desc"
          >
            Description of element 1
          </div>
        </td>
      </tr>
      <tr
        className="tc-table-row theme-row"
        data-id="elem_2"
      >
        <td
          className="td-name theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data tc-table-row-data-name"
          >
            element 2
          </div>
        </td>
        <td
          className="td-type theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data tc-table-row-data-type"
          >
            string
          </div>
        </td>
        <td
          className="td-desc theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data tc-table-row-data-desc"
          >
            This element is a string
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render a table width default header default-table-with-header 1`] = `
<div
  className="tc-table theme-table"
>
  <table>
    <thead
      className="tc-table-header theme-head"
    >
      <tr
        className="theme-header"
      >
        <th
          className="th-name theme-cell"
        >
          <div
            className="tc-table-header-cell name"
          >
            name
          </div>
        </th>
        <th
          className="th-type theme-cell"
        >
          <div
            className="tc-table-header-cell type"
          >
            type
          </div>
        </th>
        <th
          className="th-desc theme-cell"
        >
          <div
            className="tc-table-header-cell desc"
          >
            desc
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      className="tc-table-body theme-body"
      onScroll={undefined}
    >
      <tr
        className="tc-table-row theme-row"
        data-id="elem_1"
      >
        <td
          className="td-name theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data tc-table-row-data-name"
          >
            element 1
          </div>
        </td>
        <td
          className="td-type theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data tc-table-row-data-type"
          >
            string
          </div>
        </td>
        <td
          className="td-desc theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data tc-table-row-data-desc"
          >
            Description of element 1
          </div>
        </td>
      </tr>
      <tr
        className="tc-table-row theme-row"
        data-id="elem_2"
      >
        <td
          className="td-name theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data tc-table-row-data-name"
          >
            element 2
          </div>
        </td>
        <td
          className="td-type theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data tc-table-row-data-type"
          >
            string
          </div>
        </td>
        <td
          className="td-desc theme-cell"
        >
          <div
            className="tc-table-cell tc-table-row-data theme-data tc-table-row-data-desc"
          >
            This element is a string
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
